<resources>
    <string name="app_name">ImportNew</string>
    <string name="nav_option">操作</string>
    <string name="nav_setting">设置</string>
    <string name="nav_info">关于</string>
    <string name="nav_java">Java</string>
    <string name="nav_android">Android</string>
    <string name="nav_ios">iOS</string>
    <string name="nav_python">Python</string>
    <string name="nav_web">Web前端</string>
    <string name="nav_design">设计</string>
    <string name="menu_open_in_browser">在浏览器打开</string>
    <string name="menu_replce_web">切换到web显示</string>
    <string name="menu_replce_text">切换到文本显示</string>
    <string name="toast_load_success">加载成功</string>
</resources>
